--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     
     <input type="text" placeholder="Usuario" required>
     <input type="password" placeholder="Contraseña" required>
-    <button onclick="FunctionLogin()">Ingresar</button>
+    <button type="submit" onclick="FunctionLogin()">Ingresar</button>
 
 
   </div>
