--- a/index.html
+++ b/index.html
@@ -39,12 +39,14 @@
 
 <body class="text-center">
   <div style="margin: 0 auto;">
-  <h1> Ingresar </h1>
+    <img src="./img/login.png" >
+  
+  <p>Por favor ingresar nombre de usuario y contraseña</p>
     
-    <input type="text" placeholder="Usuario" required>
-    <input type="password" placeholder="Contraseña" required>
+    <input type="text" id="input1" placeholder="Usuario" required>
+    <input type="password" id="input2"  placeholder="Contraseña" required>
     <button type="submit" onclick="FunctionLogin()">Ingresar</button>
-
+   
 
   </div>
 
