--- a/product-info.html
+++ b/product-info.html
@@ -24,7 +24,16 @@
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
       <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-      <a id="user" class="py-2 d-none d-md-inline-block"></a>
+      <div class="btn-group">
+        <button type="button" class="btn btn-secondary btn-sm dropdown-toggle" data-toggle="dropdown">
+          <a id="user" class="py-2 d-none d-md-inline-block"></a>
+        </button>
+        <div class="dropdown-menu dropdown-menu-right">
+          <a class="dropdown-item" href="cart.html">Mi carrito</a>
+          <a class="dropdown-item" href="my-profile.html">Mi cuenta</a>
+          <a class="dropdown-item" onclick="cerrarSesion()">Cerrar sesión</a>
+        </div>
+      </div>
     </div>
   </nav>
   
@@ -68,6 +77,14 @@
       <a type="button" class="btn btn-light btn-lg btn-block" href="products.html">Ver productos</a>
     </div>
   
+
+  <div  class="container mt-5">
+    <h4>Ver productos relacionados</h4>
+    <br>
+    <div class="row text-center text-lg-left pt-2" id="producto_relacionado">
+    </div>
+  </div>
+
     <div class="container mt-5">
       <div class="text-center p-4"> 
        <h4>Comentarios</h4> 
