--- a/products.html
+++ b/products.html
@@ -22,7 +22,17 @@
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-        <a id="user" class="py-2 d-none d-md-inline-block"></a>
+        
+        <div class="btn-group">
+          <button type="button" class="btn btn-secondary btn-sm dropdown-toggle" data-toggle="dropdown">
+            <a id="user" class="py-2 d-none d-md-inline-block"></a>
+          </button>
+          <div class="dropdown-menu dropdown-menu-right">
+            <a class="dropdown-item" href="cart.html">Mi carrito</a>
+            <a class="dropdown-item" href="my-profile.html">Mi cuenta</a>
+            <a class="dropdown-item" onclick="cerrarSesion()">Cerrar sesión</a>
+          </div>
+        </div>
       </div>
     </nav>
    
@@ -53,7 +63,7 @@
         <div class="row justify-content-end">
           <div class="col-md-6">
             <div class="input-group rounded">
-              <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
+              <input type="search" class="form-control rounded" placeholder="Buscar" aria-label="Search"
                 aria-describedby="search-addon" />
               <span class="input-group-text border-0" id="search-addon" onclick="search()">
                 <i class="fas fa-search"></i>
