--- a/cart.html
+++ b/cart.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0049)https://getbootstrap.com/docs/4.3/examples/album/ -->
+
 <html lang="en">
 
 <head>
@@ -12,23 +12,9 @@
   <script src="js/controlUsuario.js"></script>
   <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <style>
-    .bd-placeholder-img {
-      font-size: 1.125rem;
-      text-anchor: middle;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-    }
 
-    @media (min-width: 768px) {
-      .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-      }
-    }
-  </style>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
   <link href="css/dropzone.css" rel="stylesheet">
@@ -54,14 +40,64 @@
       </div>
     </div>
   </nav>
-  <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-      <h4 class="alert-heading">¡A trabajar! :)</h4>
-      <p>Esta sección corresponde a: Entrega 5 (Fecha de entrega: 17/10/2021) y Entrega 7 (Fecha de entrega: 14/11/2021).</p>
-      <hr>
-      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
-    </div>
+
+ <main class="page" >
+  <section class="shopping-cart dark">
+    <div class="container">
+      <div class="block-heading">
+           <h2>Mi Carrito</h2>
+           <p class="lead">A continuación verá los detalles de su compra</p>
+      </div>
+      <div class="content">
+        <div class="row">
+          <div  id="cat-list-container" class="col-lg-8" ></div>
+          <div class="col-lg-4 ">
+            <div class="summary">
+              <h3>Resumen</h3>
+              <div class="summary-item"><span class="text">Subtotal</span><span class="price" id="subtotal"></span></div>
+              <div class="summary-item"><span class="text">Descuento</span><span class="price">$0</span></div>
+              <div class="summary-item"><span class="text">Envío</span><span class="price">$0</span>
+                <div>
+                  <input type="radio" id="Standar" name="drone" value="Standar"
+                         checked>
+                  <label for="huey">Standar (5% sobre el total)</label>
+                </div>
+                
+                <div>
+                  <input type="radio" id="Express" name="drone" value="Express">
+                  <label for="dewey">Express (7% sobre el total)</label>
+                </div>
+                
+                <div>
+                  <input type="radio" id="Premium" name="drone" value="Premium">
+                  <label for="louie">Premium (15% sobre el total)</label>
+                </div></div>
+              <div class="summary-item"><span class="text">Total</span><span class="price" id="total"></span></div>
+              <button type="button" class="btn btn-primary btn-lg btn-block">Finalizar</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>    
+ </section>
+</main>
+</body>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  
+ <footer class="text-muted">
+  <div class="container">
+      <p>Este sitio forma parte de Desarrollo Web - JAP - 2020</p>
+      <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
   </div>
+</footer>
+<div class="alert fade" role="alert" id="alertResult">
+    <span id="resultSpan"></span>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+
   <div id="spinner-wrapper">
     <div class="lds-ring">
       <div></div>
@@ -78,3 +114,6 @@
 </body>
 
 </html>
+
+
+
