--- a/index.html
+++ b/index.html
@@ -53,5 +53,6 @@
 
   <script src="js/init.js"></script>
   <script src="js/login.js"></script>
+  <script src="js/my-profile.js"></script>
 </body>
 </html>
