--- a/products.html
+++ b/products.html
@@ -90,10 +90,24 @@
               </div>
             </div>
         </div>
-        <div class="row">
-            <div class="list-group" id="cat-list-container" onclick="redirectProduct()">
-            </div>
+        
+        <!---
+        <div class="container">
+          <div clas="row">
+            <div class="list-group" id="cat-list-container" onclick="redirectProduct()"></div>
+          </div>  
         </div>
+        -->
+
+        <div class="album py-5 bg-light">
+          <div class="container">
+            <div class="row" id="cat-list-container" onclick="redirectProduct()">
+            </div>
+          </div>
+        </div>
+
+
+
     </div>
 </main>
   
